# roboracer

./: .dockerignore  .gitignore  Dockerfile  autodrive_devkit.sh  colcon_defaults.yaml  pixi.toml  pixi_generate_deps.py  racer_view.rviz
.claude/skills/clingwrap/: SKILL.md
.claude/skills/jig/: SKILL.md
docs/: midline_control.md  racing_architecture.md
docs/ros_graph/: graph_full_system.dot  graph_group_control.dot  graph_group_perception.dot  graph_toplevel.dot
scripts/: docker_submit.sh  docker_test.sh  fetch_sim.sh
src/: dependencies.repos
src/autodrive_devkit/autodrive_roboracer/: autodrive_bridge.py  teleop_keyboard.py
src/autodrive_devkit/rviz/: autodrive_roboracer.rviz
src/autodrive_roboracer/: requirements_python_3.10.txt  setup.py
src/autodrive_roboracer/autodrive_roboracer/: config.py
src/autodrive_roboracer/interfaces/: autodrive_bridge.yaml  teleop_keyboard.yaml
src/autodrive_roboracer/launch/: bringup_graphics.launch.py  bringup_headless.launch.py
src/control/: CMakeLists.txt  package.xml
src/control/nodes/tentacles/: interface.yaml  tentacles.cpp  tentacles.hpp
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: ekf.yaml
src/localization/nodes/wheel_odometry/: interface.yaml  wheel_odometry.cpp  wheel_odometry.hpp
src/perception/: CMakeLists.txt  package.xml
src/perception/nodes/midline_tracer/: interface.yaml  midline_tracer.cpp  midline_tracer.hpp
src/perception/nodes/wall_extractor/: interface.yaml  wall_extractor.cpp  wall_extractor.hpp
src/racer/: CMakeLists.txt  package.xml
src/racer/config/: racer_view.rviz
src/racer/launch/: racer.launch.py
src/racer/urdf/: racer.urdf
src/racer_interfaces/: CMakeLists.txt  package.xml
src/racer_interfaces/msg/: Midline.msg  WallSegment.msg  WallSegmentArray.msg
