<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racer</name>
  <version>0.0.0</version>
  <description>Top-level entry point for the racer system.</description>
  <maintainer email="hello@alistairenglish.com">Alistair English</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>jig</depend>
  <depend>clingwrap</depend>

  <exec_depend>autodrive_roboracer</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
